file(GLOB FILES {FILES} "*.cpp")
Set(SUBPATH ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME})
set(SUBDIRECTORIES "")
#Add all subdirectories 
foreach(VAR ${SUBDIRECTORIES})
	add_subdirectory(${VAR})
endforeach()

if(FILES)
	#Add source files to target
	target_sources("${PROJECT_NAME}" PRIVATE ${FILES})
	
	#Install our source files
	install(FILES ${FILES} DESTINATION ${SUBPATH})
endif()